# Adore

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: line-count.yml
doc/: README.md
docs/: CMakeLists.txt  README.md
examples/: README.md
include/: README.md
include/Adore/: API.hpp  Adore.hpp  Buffer.hpp  Context.hpp  Log.hpp  Logger.hpp  Renderer.hpp  Shader.hpp  Window.hpp  export.hpp  version.hpp  version.hpp.in
include/Adore/Internal/: FramesInFlight.hpp  Log.hpp  Window.hpp
include/Adore/Internal/Vulkan/: Buffer.hpp  Renderer.hpp  Shader.hpp  VulkanContext.hpp  VulkanWindow.hpp  Window.hpp
lib/: CMakeLists.txt  README.md
src/: Buffer.cpp  CMakeLists.txt  Context.cpp  Log.cpp  Logger.cpp  README.md  Renderer.cpp  Shader.cpp  Window.cpp
src/Internal/: Log.cpp
src/Internal/Vulkan/: Buffer.cpp  Context.cpp  Renderer.cpp  Shader.cpp  VulkanContext.cpp  VulkanWindow.cpp  Window.cpp
tests/: README.md
